# backend

./: Cargo.toml  package-lock.json  package.json
entity/: Cargo.toml
entity/src/: campaign.rs  class.rs  mod.rs  prelude.rs  product.rs  product_campaign.rs  product_campaign_sale.rs  sale.rs  user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20250401_191153_create_user_table.rs  m20250401_193019_create_product_table.rs  m20250401_195229_create_campaign_table.rs  m20250401_195729_create_product_campaign_table.rs  m20250401_202011_create_sale_table.rs  m20250401_225437_create_product_campaign_sale_table.rs  m20250403_191648_create_class_table.rs  main.rs
src/: App.js  app.rs  main.js  main.rs  state.rs
src/config/: app.rs  cors.rs  database.rs
src/configs/: email.rs  mod.rs
src/connections/: database.rs  email.rs
src/handlers/: user.rs
src/helpers/: error.js
src/middleware/: cors.rs
src/middlewares/: cors.rs
src/routes/: mod.rs  routes.js  user.rs
src/services/: encryptor.rs
