[package]
name = "tifood"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[workspace]
members = [
    "entity",
    "migration"
]

[dependencies]
axum = "0.8.3"
dotenvy = "0.15.7"
entity = { path = "entity" }
migration = { path = "migration" }
sea-orm = { version = "1.1.8", features = ["runtime-tokio-rustls", "sqlx-postgres", "sqlx-mysql"] }
tokio = { version = "1.44.1", features = ["sync", "macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["cors"] }