[package]
name = "tifood"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[workspace]
members = [
    "entity",
    "migration"
]

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.3", features = ["multipart"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
dotenvy = "0.15.7"
entity = { path = "entity" }
jsonwebtoken = "9.3.1"
lettre = { version = "0.11.15", features = ["tokio1", "tokio1-native-tls"] }
migration = { path = "migration" }
sea-orm = { version = "1.1.8", features = ["runtime-tokio-rustls", "sqlx-postgres", "sqlx-mysql"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["sync", "macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["cors"] }
uuid = { version = "1.16.0", features = ["v4"] }
validator = { version = "0.20.0", features = ["derive"] }
