[package]
name = "migration"
version = "0.1.0"
edition = "2024"

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
argon2 = "0.5.3"
async-std = { version = "1", features = ["attributes", "tokio1"] }
dotenvy = "0.15.7"

[dependencies.sea-orm-migration]
version = "1.1.8"
features = [
  "runtime-tokio-rustls",  # `ASYNC_RUNTIME` feature
  "sqlx-postgres",         # `DATABASE_DRIVER` feature
  "sqlx-mysql",
  "with-chrono"
]
